# pytesting-demo

./: .gitignore  pyproject.toml
pytesting/: app.py  slack.py
tests/: test_mock.py  test_pandas.py  test_reu.py  test_simple.py
