[tool.poetry]
name = "pytesting"
version = "0.1.0"
description = ""
authors = ["cazamora <camilo.zamora@mercadolibre.com.co>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
pandera = {extras = ["strategies"], version = "^0.13.4"}
pandas = "^1.5.2"
ipykernel = "^6.20.0"
mypy = "^0.991"
isort = "^5.11.4"
pytest-mock = "^3.10.0"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
